--- a/page12.html
+++ b/page12.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile website building</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web site maker software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -96,7 +96,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 58%;">
-                  <div class="mbr-figure"><img src="assets/images/grandbazart3-web-1400x1866-1.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/beginbeeld-test2-goed-1400x2097-83.jpg"></div>
               </div>
 
             </div>
