--- a/page7.html
+++ b/page7.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive site design</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-38" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy web page development software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-38" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
