--- a/page12.html
+++ b/page12.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web site maker software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
