--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web design software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-78.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web building software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-78.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -250,7 +250,7 @@ Je kan de ruimte zien als een soort bel die om ons heen zit. Doordat we (onbewus
                 <p><strong>Adres</strong><br>Universiteit Antwerpen<br>Mutsaardstraat,&nbsp;<br>2000 Antwerpen</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><br><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong><br></strong></span></font>hanne.pots@student.uantwerpen.be<br>stephanie.deloose@student.uantwerpen.be<br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be</p>
+                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><span style="line-height: 1.5;"><br></span><span style="line-height: 1.5;">hanne.pots@student.uantwerpen.be</span><br>stephanie.deloose@student.uantwerpen.be<br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><br><br></p>
