--- a/page4.html
+++ b/page4.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive website builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2q" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 100px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best offline web site builder software download</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2q" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 100px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -97,7 +97,7 @@
                 <p><strong>Adres</strong><br>Universiteit Antwerpen<br>Mutsaardstraat,&nbsp;<br>2000 Antwerpen</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><br><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong><br></strong></span></font>hanne.pots@student.uantwerpen.be<br>stephanie.deloose@student.uantwerpen.be<br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be</p>
+                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><span style="line-height: 1.5;"><br></span><span style="line-height: 1.5;">hanne.pots@student.uantwerpen.be</span><br>stephanie.deloose@student.uantwerpen.be<br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><br><br></p>
