--- a/page11.html
+++ b/page11.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop website building</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-56" style="background-image: url(assets/images/tussentitel-2000x392-498.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop website maker software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-56" style="background-image: url(assets/images/tussentitel-2000x392-4912.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -242,7 +242,7 @@
                 <p><strong>Adres</strong><br>Universiteit Antwerpen<br>Mutsaardstraat,&nbsp;<br>2000 Antwerpen</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><span style="line-height: 1.5;"><br></span><span style="line-height: 1.5;">hanne.pots@student.uantwerpen.be</span><br>stephanie.deloose@student.uantwerpen.be<br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be</p>
+                <p><font color="#7c7c7c"><span style="font-size: 15px; letter-spacing: -1px; line-height: 22px;"><strong>Contact</strong></span></font><br><span style="line-height: 1.5;">stephanie.deloose@student.uantwerpen.be</span><br>fien.vandenbergh@student.uantwerpen.be<br>lauren.gheys@student.uantwerpen.be<br>hanne.pots@student.uantwerpen.be<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><br><br></p>
