--- a/page9.html
+++ b/page9.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg web site building</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4k" style="background-image: url(assets/images/tussentitel-2000x392-4915.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap web site design</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4k" style="background-image: url(assets/images/tussentitel-2000x392-4916.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
